<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/edittext_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_number"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_amount"
        android:layout_below="@+id/input_layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/edittext_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_enter_amount"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_transfer"
        android:layout_below="@+id/input_layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/transfer"
        android:textColor="@android:color/white"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

</RelativeLayout>
