<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.webege.rivu.ecommerceapp.MobileRechargeSubmit">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_above="@+id/input_enter_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/edittext_enter_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_number"/>

    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_enter_amount"
            android:layout_above="@+id/input_confirm_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">

            <EditText
                android:id="@+id/edittext_enter_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_enter_amount"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_confirm_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">

            <EditText
                android:id="@+id/edittext_enter_confirm_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_enter_confirm_amount"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_recharge"
            android:layout_below="@+id/input_confirm_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Recharge"
            android:textColor="@android:color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"/>

</RelativeLayout>
